--- a/projets.html
+++ b/projets.html
@@ -285,6 +285,7 @@
                     menuBox.style.display = 'flex';
                 }
             });
+            updateVideo(currentVideoIndex);
         });
 
     const videoList = [
