--- a/travaux.html
+++ b/travaux.html
@@ -142,7 +142,7 @@
         <div class="header-container flex items-center justify-between">
             <a href="index.html" class="flex items-center">
                 <img src="media/images/iconPF.png" alt="Logo" class="w-12 h-12 md:w-24 md:h-24">
-                <h1 class="text-2xl sm:text-3xl md:text-6xl text-white font-bold font-DotGothic16">Mon Portfolio</h1>
+                <h1 class="text-2xl sm:text-3xl md:text-6xl text-white font-bold font-DotGothic16">SIMONIN Michel</h1>
             </a>
 
             <div class="hamburger-menu" id="menu__toggle">
@@ -323,7 +323,7 @@
     </div>
 
     <footer class="p-6 bg-black text-white flex flex-col md:flex-row items-center justify-evenly text-lg z-10 font-DotGothic16">
-        <p class='p-6 text-lg md:text-4xl'>Michel Simonin</p>
+        <p class='p-6 text-lg md:text-4xl'>Mon Portfolio</p>
     </footer>
 
     <script>
