--- a/veille.html
+++ b/veille.html
@@ -177,11 +177,11 @@
                             <div class='bg-black bg-opacity-75 text-white shadow-md rounded-lg p-6'>
 
                                 <h1 class='text-4xl font-bold font-Roboto text-center mb-6'>Qu’est-ce qu’une veille technologique ?</h1>
-                                <p class=' text-center mb-4 italic'>\"C’est une activité qui consiste à se tenir informé sur un secteur d’activité précis de ces nouvelles innovations, il se doit de prévenir, informer et alerter. Cela permet en autre de constituer une base d’informations\"</p>
+                                <p class=' text-center mb-4 italic'>"C’est une activité qui consiste à se tenir informé sur un secteur d’activité précis de ces nouvelles innovations, il se doit de prévenir, informer et alerter. Cela permet en autre de constituer une base d’informations"</p>
 
                                 <h1 class='text-4xl font-bold font-Roboto text-center mb-6'>L'apport de l'IA dans la programmation</h1>
-                                <p class='text-center mb-4 font-DotGothic16'>La technologie évoluant à un rythme effréné, il est important de rester informé des dernières avancées pour maintenir sa pertinence et son efficacité professionnelle. Ma veille technologique se concentre sur l'apport des l'intelligences artificielles dans le domaine de la programmation, explorant comment celles-ci transforment non seulement la façon dont nous imaginons, concevons, mais aussi la manière dont nous abordons les problèmes informatiques complexes et plus principalement au niveau du code</p>
-                                <p class='text-center mb-4 font-DotGothic16'>L'intégration de l'IA dans la programmation offre un potentiel révolutionnaire, ouvrant de nouvelles perspectives et possibilités pour les développeurs et ingénieurs logiciels</p>
+                                <p class='text-center mb-4 text-xl'>La technologie évoluant à un rythme effréné, il est important de rester informé des dernières avancées pour maintenir sa pertinence et son efficacité professionnelle. Ma veille technologique se concentre sur l'apport des l'intelligences artificielles dans le domaine de la programmation, explorant comment celles-ci transforment non seulement la façon dont nous imaginons, concevons, mais aussi la manière dont nous abordons les problèmes informatiques complexes et plus principalement au niveau du code</p>
+                                <p class='text-center mb-4 text-xl'>L'intégration de l'IA dans la programmation offre un potentiel révolutionnaire, ouvrant de nouvelles perspectives et possibilités pour les développeurs et ingénieurs logiciels</p>
                             
                             </div>
 
