--- a/projets.html
+++ b/projets.html
@@ -234,7 +234,7 @@
                                 <div id='travail2' class='hidden w-full bg-white p-6 shadow-lg rounded-lg mb-4 overflow-hidden transition-all duration-500 ease-in-out' style='max-height: 0;'>
                                     <div class='p-6'>
                                         <p class='text-xl font-bold mb-4'>J'ai créé cette application dans le but de m'exercer au langage Kotlin (Android) mais aussi pour apprendre les bonnes pratiques en matière de communication avec une API. Contrairement à ce que l'on pourrait croire, cette appli est mise à jour lorsque j'ai le temps de travailler dessus, que ce soit pour corriger des problèmes, ajouter des fonctionnalités, modifier l'affichage, etc...
-                                        <br>L'API de Steam ne disposant pas d'une documentation très détaillée, j'ai eu recours à la méthode du \"try and error\", ce qui m'a beaucoup exercé à la résolution de problèmes ainsi qu'aux requêtes HTTP et HTTPS !
+                                        <br>L'API de Steam ne disposant pas d'une documentation très détaillée, j'ai eu recours à la méthode du "try and error", ce qui m'a beaucoup exercé à la résolution de problèmes ainsi qu'aux requêtes HTTP et HTTPS !
                                         </p>
                                     </div>
 
