--- a/projets.html
+++ b/projets.html
@@ -293,6 +293,8 @@
         './media/images/LugiaHq.mp4',
         './media/images/Background2.mp4',
         './media/images/Background3.mp4',
+        './media/images/WarmUpAnim.mp4',
+        './media/images/SuperWarmUpAnim.mp4',
     ];
 
     let currentVideoIndex = 0;
