--- a/projets.html
+++ b/projets.html
@@ -289,12 +289,13 @@
         });
 
     const videoList = [
-        './media/images/Amazing.mp4',
-        './media/images/LugiaHq.mp4',
-        './media/images/Background2.mp4',
-        './media/images/Background3.mp4',
+        './media/images/TTOF.mp4',
         './media/images/WarmUpAnim.mp4',
         './media/images/SuperWarmUpAnim.mp4',
+        './media/images/Background2.mp4',
+        './media/images/Background3.mp4',
+        './media/images/LugiaHq.mp4',
+        './media/images/Amazing.mp4',
     ];
 
     let currentVideoIndex = 0;
