--- a/travaux.html
+++ b/travaux.html
@@ -224,6 +224,7 @@
                                     <span class='flex-grow'>Site Web : Le Bowling du Front de Mer*</span>
                                 </button>
                                 <div id='travail2' class='hidden w-full bg-white p-6 shadow-lg rounded-lg mb-4 overflow-hidden transition-all duration-500 ease-in-out' style='max-height: 0;'>
+                                    <h1 class='text-xl font-bold underline mb-4'>*Le site n'est malheureusement plus disponible.</h1>
                                     <div class='relative w-full' style='height: 800px;'>
                                         <iframe src='https://bowlingdufrontdemer.alwaysdata.net/' frameborder='0' class='absolute inset-0 w-full h-full' allowfullscreen></iframe>
                                     </div>
